delete useless file

--- a/package.json
+++ b/package.json
@@ -6,18 +6,12 @@
   "scripts": {
     "dev": "vite --mode dev -- platform=debug",
     "build": "vite build --mode dev -- platform=debug",
-    "build:demo.dev": "vite build --mode dev -- platform=demo",
-    "build:demo.test": "vite build --mode test -- platform=demo",
-    "build:demo.prod": "vite build --mode prod -- platform=demo",
-    "build:pad.dev": "vite build --mode test -- platform=pad",
+    "build:pad.dev": "vite build --mode dev -- platform=pad",
     "build:pad.test": "vite build --mode test -- platform=pad",
     "build:pad.prod": "vite build --mode prod -- platform=pad",
-    "build:pc.dev": "vite build --mode test -- platform=pc",
+    "build:pc.dev": "vite build --mode dev -- platform=pc",
     "build:pc.test": "vite build --mode test -- platform=pc",
     "build:pc.prod": "vite build --mode prod -- platform=pc",
-    "build:admin.dev": "vite build --mode dev -- platform=admin",
-    "build:admin.test": "vite build --mode test -- platform=admin",
-    "build:admin.prod": "vite build --mode prod -- platform=admin",
     "preview": "vite preview",
     "lint": "npx eslint  --ext .js,.vue src/"
   },
